@@ -1,13 +1,13 @@
 package nus.iss.se.product.service.impl;
 
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
-import com.baomidou.mybatisplus.core.conditions.update.UpdateWrapper;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
+import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import lombok.RequiredArgsConstructor;
-import nus.iss.se.product.dto.CreateMagicBagRequest;
+import nus.iss.se.product.dto.MagicBagCreateDto;
 import nus.iss.se.product.dto.MagicBagDto;
 import nus.iss.se.product.dto.MagicBagListResponse;
-import nus.iss.se.product.dto.UpdateMagicBagRequest;
+import nus.iss.se.product.dto.MagicBagUpdateDto;
 import nus.iss.se.product.entity.MagicBag;
 import nus.iss.se.product.mapper.MagicBagMapper;
 import nus.iss.se.product.service.IMagicBagService;
@@ -15,20 +15,13 @@ import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
 import java.math.BigDecimal;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
-/**
- * MagicBag 服务实现类
- * 实现盲盒相关的业务逻辑
- */
 @Service
 @RequiredArgsConstructor
-public class MagicBagServiceImpl implements IMagicBagService {
-
-    private final MagicBagMapper magicBagMapper;
+public class MagicBagServiceImpl extends ServiceImpl<MagicBagMapper, MagicBag>  implements IMagicBagService {
 
     @Override
     public MagicBagListResponse getAllMagicBags(Integer page, Integer size) {
@@ -36,11 +29,11 @@ public class MagicBagServiceImpl implements IMagicBagService {
         QueryWrapper<MagicBag> queryWrapper = new QueryWrapper<>();
         queryWrapper.eq("is_active", true);
 
-        Page<MagicBag> result = magicBagMapper.selectPage(magicBagPage, queryWrapper);
+        Page<MagicBag> result = baseMapper.selectPage(magicBagPage, queryWrapper);
 
         List<MagicBagDto> magicBagDtos = result.getRecords().stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
 
         MagicBagListResponse response = new MagicBagListResponse();
         response.setMagicBags(magicBagDtos);
@@ -54,7 +47,7 @@ public class MagicBagServiceImpl implements IMagicBagService {
 
     @Override
     public MagicBagDto getMagicBagById(Integer id) {
-        MagicBag magicBag = magicBagMapper.selectById(id);
+        MagicBag magicBag = baseMapper.selectById(id);
         if (magicBag == null) {
             return null;
         }
@@ -63,164 +56,99 @@ public class MagicBagServiceImpl implements IMagicBagService {
 
     @Override
     public List<MagicBagDto> getMagicBagsByCategory(String category) {
-        List<MagicBag> magicBags = magicBagMapper.findByCategory(category);
+        List<MagicBag> magicBags = baseMapper.findByCategory(category);
         return magicBags.stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<MagicBagDto> getMagicBagsByMerchantId(Integer merchantId) {
-        List<MagicBag> magicBags = magicBagMapper.findByMerchantId(merchantId);
+        List<MagicBag> magicBags = baseMapper.findByMerchantId(merchantId);
         return magicBags.stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    @Transactional(rollbackFor = Exception.class)
-    public MagicBagDto createMagicBag(CreateMagicBagRequest request) {
-        // 检查同一商家同一天是否有相同标题的产品
-        QueryWrapper<MagicBag> queryWrapper = new QueryWrapper<>();
-        queryWrapper.eq("merchant_id", request.getMerchantId())
-                   .eq("available_date", request.getAvailableDate())
-                   .eq("title", request.getTitle());
-
-        MagicBag existingBag = magicBagMapper.selectOne(queryWrapper);
-        if (existingBag != null) {
-            return null;
-        }
-
-        // 创建新产品
+    @Transactional
+    public MagicBagDto createMagicBag(MagicBagCreateDto createDto) {
         MagicBag magicBag = new MagicBag();
-        BeanUtils.copyProperties(request, magicBag);
-        magicBag.setIsActive(true);
+        BeanUtils.copyProperties(createDto, magicBag);
+
+        // 设置默认值
+        magicBag.setActive(true);
         magicBag.setCreatedAt(LocalDateTime.now());
         magicBag.setUpdatedAt(LocalDateTime.now());
 
-        int result = magicBagMapper.insert(magicBag);
-        if (result <= 0) {
-            return null;
-        }
+        baseMapper.insert(magicBag);
 
         return convertToDto(magicBag);
     }
 
     @Override
-    @Transactional(rollbackFor = Exception.class)
-    public MagicBagDto updateMagicBag(Integer id, UpdateMagicBagRequest request) {
-        // 检查产品是否存在
-        MagicBag existingBag = magicBagMapper.selectById(id);
-        if (existingBag == null) {
-            return null;
+    @Transactional
+    public MagicBagDto updateMagicBag(Integer id, MagicBagUpdateDto updateDto) {
+        MagicBag existingMagicBag = baseMapper.selectById(id);
+        if (existingMagicBag == null) {
+            throw new RuntimeException("盲盒不存在");
         }
 
-        // 更新产品信息
-        UpdateWrapper<MagicBag> updateWrapper = new UpdateWrapper<>();
-        updateWrapper.eq("id", id);
-
-        if (request.getTitle() != null) {
-            updateWrapper.set("title", request.getTitle());
+        // 只更新非空字段
+        if (updateDto.getTitle() != null) {
+            existingMagicBag.setTitle(updateDto.getTitle());
         }
-        if (request.getDescription() != null) {
-            updateWrapper.set("description", request.getDescription());
+        if (updateDto.getDescription() != null) {
+            existingMagicBag.setDescription(updateDto.getDescription());
         }
-        if (request.getPrice() != null) {
-            updateWrapper.set("price", request.getPrice());
+        if (updateDto.getPrice() != null) {
+            existingMagicBag.setPrice(updateDto.getPrice());
         }
-        if (request.getQuantity() != null) {
-            updateWrapper.set("quantity", request.getQuantity());
+        if (updateDto.getQuantity() != null) {
+            existingMagicBag.setQuantity(updateDto.getQuantity());
         }
-        if (request.getPickupStartTime() != null) {
-            updateWrapper.set("pickup_start_time", request.getPickupStartTime());
+        if (updateDto.getPickupStartTime() != null) {
+            existingMagicBag.setPickupStartTime(updateDto.getPickupStartTime());
         }
-        if (request.getPickupEndTime() != null) {
-            updateWrapper.set("pickup_end_time", request.getPickupEndTime());
+        if (updateDto.getPickupEndTime() != null) {
+            existingMagicBag.setPickupEndTime(updateDto.getPickupEndTime());
         }
-        if (request.getAvailableDate() != null) {
-            updateWrapper.set("available_date", request.getAvailableDate());
+        if (updateDto.getAvailableDate() != null) {
+            existingMagicBag.setAvailableDate(updateDto.getAvailableDate());
         }
-        if (request.getCategory() != null) {
-            updateWrapper.set("category", request.getCategory());
+        if (updateDto.getCategory() != null) {
+            existingMagicBag.setCategory(updateDto.getCategory());
         }
-        if (request.getImageUrl() != null) {
-            updateWrapper.set("image_url", request.getImageUrl());
+        if (updateDto.getImageUrl() != null) {
+            existingMagicBag.setImageUrl(updateDto.getImageUrl());
         }
-        if (request.getIsActive() != null) {
-            updateWrapper.set("is_active", request.getIsActive());
+        if (updateDto.getIsActive() != null) {
+            existingMagicBag.setActive(updateDto.getIsActive());
         }
 
-        updateWrapper.set("updated_at", LocalDateTime.now());
+        existingMagicBag.setUpdatedAt(LocalDateTime.now());
 
-        int result = magicBagMapper.update(null, updateWrapper);
-        if (result <= 0) {
-            return null;
-        }
+        baseMapper.updateById(existingMagicBag);
 
-        // 返回更新后的产品信息
-        MagicBag updatedBag = magicBagMapper.selectById(id);
-        return convertToDto(updatedBag);
+        return convertToDto(existingMagicBag);
     }
 
     @Override
-    @Transactional(rollbackFor = Exception.class)
+    @Transactional
     public boolean deleteMagicBag(Integer id) {
-        // 检查产品是否存在
-        MagicBag existingBag = magicBagMapper.selectById(id);
-        if (existingBag == null) {
+        MagicBag magicBag = baseMapper.selectById(id);
+        if (magicBag == null) {
             return false;
         }
 
-        // 软删除：设置 is_active = false
-        UpdateWrapper<MagicBag> updateWrapper = new UpdateWrapper<>();
-        updateWrapper.eq("id", id)
-                    .set("is_active", false)
-                    .set("updated_at", LocalDateTime.now());
+        // 软删除：将is_active设置为false
+        magicBag.setActive(false);
+        magicBag.setUpdatedAt(LocalDateTime.now());
 
-        int result = magicBagMapper.update(null, updateWrapper);
-        if (result <= 0) {
-            return false;
-        }
-
-        return true;
+        int result = baseMapper.updateById(magicBag);
+        return result > 0;
     }
 
-    @Override
-    @Transactional(rollbackFor = Exception.class)
-    public int batchDeleteMagicBags(List<Integer> ids) {
-        if (ids == null || ids.isEmpty()) {
-            return 0;
-        }
-
-        // 批量软删除
-        UpdateWrapper<MagicBag> updateWrapper = new UpdateWrapper<>();
-        updateWrapper.in("id", ids)
-                    .set("is_active", false)
-                    .set("updated_at", LocalDateTime.now());
-
-        int result = magicBagMapper.update(null, updateWrapper);
-        return result;
-    }
-
-    @Override
-    public List<MagicBagDto> getBatchByIds(List<Integer> ids) {
-        if (ids == null || ids.isEmpty()) {
-            return List.of();
-        }
-
-        // 使用 MyBatis-Plus 的批量查询
-        List<MagicBag> magicBags = magicBagMapper.selectBatchIds(ids);
-
-        return magicBags.stream()
-                .map(this::convertToDto)
-                .collect(Collectors.toList());
-    }
-
-    /**
-     * 将实体转换为DTO
-     * @param magicBag 实体对象
-     * @return DTO对象
-     */
     private MagicBagDto convertToDto(MagicBag magicBag) {
         if (magicBag == null) {
             return null;
